[gd_scene load_steps=16 format=3 uid="uid://cklnxpp1e14xt"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_87p0q"]
[ext_resource type="Script" path="res://wallcheck.gd" id="2_88mig"]
[ext_resource type="Texture2D" uid="uid://dufm8eliq0k14" path="res://icon.svg" id="3_eoovv"]
[ext_resource type="Script" path="res://SightArea.gd" id="4_ks2db"]
[ext_resource type="Texture2D" uid="uid://cucuxkt6pqrfu" path="res://light_sprites/lgiht.png" id="5_0wtw4"]
[ext_resource type="Script" path="res://PointLight2D.gd" id="6_qmv8v"]
[ext_resource type="Script" path="res://StaticBody2D.gd" id="7_vxj68"]
[ext_resource type="Texture2D" uid="uid://dm61ceeosakpk" path="res://aL.png" id="8_yt4vv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8mbhu"]
size = Vector2(25, 25)

[sub_resource type="CircleShape2D" id="CircleShape2D_impi0"]
radius = 250.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tdsar"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_egkbt"]

[sub_resource type="Animation" id="Animation_xqj37"]
resource_name = "flicker"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StateIndicatorLight:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_up0f5"]
resource_name = "get_back_to_life"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tk80r"]
_data = {
"flicker": SubResource("Animation_xqj37"),
"get_back_to_life": SubResource("Animation_up0f5")
}

[node name="Enemy" type="CharacterBody2D" groups=["enemies", "guard"]]
z_index = 1
position = Vector2(113, 207)
collision_layer = 4
script = ExtResource("1_87p0q")

[node name="wallcheck" type="RayCast2D" parent="."]
position = Vector2(0, 1)
collision_mask = 2
script = ExtResource("2_88mig")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8mbhu")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_eoovv")

[node name="SightArea" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("4_ks2db")

[node name="FlashLight" type="PointLight2D" parent="SightArea"]
texture = ExtResource("5_0wtw4")
texture_scale = 0.2
script = ExtResource("6_qmv8v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea"]
visible = false
shape = SubResource("CircleShape2D_impi0")
debug_color = Color(0.690196, 0.980392, 0, 0.419608)

[node name="checkeyesight" type="RayCast2D" parent="SightArea"]
collision_mask = 2

[node name="SuspicionCountDownTimer" type="Timer" parent="." groups=["enemytimers"]]
wait_time = 10.0
one_shot = true

[node name="AlertCountDownTimer" type="Timer" parent="." groups=["enemytimers"]]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="projectile" type="StaticBody2D" parent="."]
visible = false
position = Vector2(0, -1)
collision_layer = 0
script = ExtResource("7_vxj68")

[node name="CollisionShape2D" type="CollisionShape2D" parent="projectile"]
shape = SubResource("CircleShape2D_tdsar")

[node name="light_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="light_checker"]
shape = SubResource("RectangleShape2D_egkbt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tk80r")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CluelessTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="DisruptedCountdownTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StateIndicatorLight" type="PointLight2D" parent="."]
energy = 2.0
texture = ExtResource("8_yt4vv")
texture_scale = 0.05

[connection signal="tree_entered" from="." to="wallcheck" method="_on_enemy_tree_entered"]
[connection signal="tree_entered" from="." to="SightArea" method="_on_enemy_tree_entered"]
[connection signal="timeout" from="SuspicionCountDownTimer" to="." method="_on_suspicion_timer_timeout"]
[connection signal="timeout" from="AlertCountDownTimer" to="." method="_on_alert_count_down_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="area_entered" from="light_checker" to="." method="_on_light_checker_area_entered"]
[connection signal="area_exited" from="light_checker" to="." method="_on_light_checker_area_exited"]
[connection signal="timeout" from="DisruptedCountdownTimer" to="." method="_on_disrupted_countdown_timer_timeout"]
